# simplicio-agent

./: .coveragerc  .coveragerc.core  .envrc  .gitignore  .hadolint.yaml  .orchestrator-workitems-test.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.es.md  CONTRIBUTING.md  DOD.md  MANIFEST.in  README.es.md  README.md  README.ur-pk.md  README.zh-CN.md  RELEASE_DAG.md  SECURITY.es.md  SECURITY.md  SKILL_STACK_PR409.md  TOON-CONTRACT.md  adapter-requirements.toml  batch_runner.py  cli-config.yaml.example  cli.py  constraints-termux.txt  desktop-layout.json  flake.nix  hermes  hermes_cli.spec  hermes_constants.py  hermes_logging.py  hermes_state.py  mcp_low_freq_bridges.py  mcp_serve.py  model_tools.py  package-lock.json  package.json  pyproject.toml  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  quality-gates.yml
.orchestrator/: loop-budget.json
.plans/: openai-api-server.md
READMEs/: README.ar-SA.md  README.de-DE.md  README.es-ES.md  README.fr-FR.md  README.hi-IN.md  README.it-IT.md  README.ja-JP.md  README.ko-KR.md  README.nl-NL.md  README.pl-PL.md  README.pt-BR.md  README.ru-RU.md  README.tr-TR.md  README.zh-CN.md
acp_adapter/: entry.py  session.py  tools.py
acp_registry/: agent.json
agent/: _fastjson.py  _hermes_fast.py  adapter_contract.py  adaptive_architecture.py  adaptive_controller.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  asolaria_integration_contract.py  asolaria_pattern_contract.py  async_host.py  attention_runtime.py  attention_schema.py  curator.py  (+137 more)
rust_ext/: Cargo.toml  pyproject.toml
rust_ext/src/: lib.rs
(+2084 files in other folders)
