[package]
name = "hermes-fast"
version = "0.1.0"
edition = "2021"
description = "Rust hot-path extensions for hermes-agent (streaming JSON tool-call parsing, token estimation, message truncation)"
license = "Apache-2.0"

[lib]
name = "hermes_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
